# redis-ha

./: .env  .env.example  .gitignore  README.md  docker-compose.lb.yml  docker-compose.monitor.yml  docker-compose.yml  redis.conf  setup.sh
haproxy/: haproxy.cfg.template
monitor/: Cargo.toml  Dockerfile
monitor/src/: alerts.rs  checker.rs  config.rs  main.rs  state.rs
monitor/src/notifiers/: discord.rs  email.rs  mod.rs  webhook.rs
multi-server/: servers.conf.example
scripts/: delete.sh  generate-server-compose.sh  helpers.sh  multi-server-init.sh  restart.sh  scale-down.sh  scale-up.sh  start.sh  status.sh  stop.sh  urls.sh
