[package]
name = "redis-ha-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
